--- a/HousePriceDataset_Rare_Labels.ipynb
+++ b/HousePriceDataset_Rare_Labels.ipynb
@@ -6,7 +6,7 @@
       "name": "HousePriceDataset - Rare Labels.ipynb",
       "provenance": [],
       "mount_file_id": "1Cgqp58kctdv8G0fb6Kpyv92exr6EV1k_",
-      "authorship_tag": "ABX9TyMQ591nGlEtfHspcd8SjNx2",
+      "authorship_tag": "ABX9TyN8EwQ8wElc+8cxe34j0xOc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1213,6 +1213,17 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jEGTA7P_Vpj7",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Reference\n",
+        "https://www.udemy.com/course/feature-engineering-for-machine-learning/"
       ]
     },
     {
